--- a/Builds/VisualStudio2012/open-ephys.vcxproj.filters
+++ b/Builds/VisualStudio2012/open-ephys.vcxproj.filters
@@ -32,6 +32,9 @@
     <Filter Include="open-ephys\Source\Processors">
       <UniqueIdentifier>{3DDEC88C-BAA5-2DDA-A59F-0FB74070AB82}</UniqueIdentifier>
     </Filter>
+    <Filter Include="open-ephys\Source\Processors\PluginManager">
+      <UniqueIdentifier>{BBFD2E98-99C0-86CF-0425-1182E74F2192}</UniqueIdentifier>
+    </Filter>
     <Filter Include="open-ephys\Source\Processors\Rectifier">
       <UniqueIdentifier>{1D1CBF65-097A-91AC-3A16-B6BC18264911}</UniqueIdentifier>
     </Filter>
@@ -453,6 +456,9 @@
     </ClCompile>
     <ClCompile Include="..\..\Source\Audio\AudioComponent.cpp">
       <Filter>open-ephys\Source\Audio</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Source\Processors\PluginManager\PluginManager.cpp">
+      <Filter>open-ephys\Source\Processors\PluginManager</Filter>
     </ClCompile>
     <ClCompile Include="..\..\Source\Processors\Rectifier\Rectifier.cpp">
       <Filter>open-ephys\Source\Processors\Rectifier</Filter>
@@ -2051,6 +2057,9 @@
     </ClInclude>
     <ClInclude Include="..\..\Source\Audio\AudioComponent.h">
       <Filter>open-ephys\Source\Audio</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Source\Processors\PluginManager\PluginManager.h">
+      <Filter>open-ephys\Source\Processors\PluginManager</Filter>
     </ClInclude>
     <ClInclude Include="..\..\Source\Processors\Rectifier\Rectifier.h">
       <Filter>open-ephys\Source\Processors\Rectifier</Filter>
